<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsToolbar"
        style="@style/Widget.Toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back">

        <TextView
            android:id="@+id/settingsToolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Language"
            android:textAppearance="@style/TextAppearance.Bold.20.White" />
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/englishLanguage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/germanLanguage">

        <TextView
            android:id="@+id/englishCountryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_english_non_translatable"
            android:textAppearance="@style/TextAppearance.Bold.18.Black" />

        <TextView
            android:id="@+id/englishText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/language_english"
            android:textAppearance="@style/TextAppearance.Bold.14.DarkGray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="@color/dark_gray" />

        <ImageView
            android:id="@+id/englishChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_checked"
            android:visibility="invisible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/russianLanguage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/englishLanguage">

        <TextView
            android:id="@+id/russianCountryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_russian_non_translatable"
            android:textAppearance="@style/TextAppearance.Bold.18.Black" />

        <TextView
            android:id="@+id/russianText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/language_russian"
            android:textAppearance="@style/TextAppearance.Bold.14.DarkGray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="@color/dark_gray" />

        <ImageView
            android:id="@+id/russianChecked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_checked"
            android:visibility="invisible" />
    </FrameLayout>
</LinearLayout>